Initial deployment. Minor CSS, functionality near complete

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Astro Lounge</title>
+    <section class="topnav">
+      <ul class="toplist">
+        <li>SDG Astro Lounge</li>
+        <a href class="aboutbtn">About</a>
+        <a href class="contactbtn">Contact Us</a>
+      </ul>
+    </section>
+    <section class="spaceImage">Explore your universe.</section>
+    <section class="flexSection">
+      <button class="leftPrevious">LEFT RIGHT LEFT</button>
+      <section class="apiBox">
+        <p class="line1"></p>
+        <p class="line2"></p>
+        <p class="line3"></p>
+        <p class="line4">
+          <span class="days">days</span>
+          <span class="hours">hours</span>
+          <span class="minutes">minutwes</span>
+          <span class="seconds">seconds</span>
+        </p>
+      </section>
+      <button class="rightNext">RIGHT RIGHT RIGHT</button>
+    </section>
+    <section class="bodytext"></section>
+    <section class="bottomfooter">
+      <h4 class="sdg">
+        made with 💛 at <a href="https://www.suncoast.io">SDG</a>
+      </h4>
+    </section>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class="hello-world"></h1>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
