--- a/public/index.html
+++ b/public/index.html
@@ -4,39 +4,74 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Astro Lounge</title>
-    <section class="topnav">
-      <ul class="toplist">
-        <li>SDG Astro Lounge</li>
-        <a href class="aboutbtn">About</a>
-        <a href class="contactbtn">Contact Us</a>
-      </ul>
+    <script
+      src="https://kit.fontawesome.com/21f1e92399.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/screen.css" />
+    <script src="/main.js" charset="utf-8"></script>
+  </head>
+  <body>
+    <ul class="toplist">
+      <li>SDG Astro Lounge</li>
+      <a href class="aboutbtn">About</a>
+      <a href class="contactbtn">Contact Us</a>
+    </ul>
+    <section class="spaceImage">
+      <p class="spaceText">Explore your universe.</p>
     </section>
-    <section class="spaceImage">Explore your universe.</section>
+    <div class="copyrightText"></div>
+    <h2 class="launchesHeader">Upcoming SpaceX Launches</h2>
     <section class="flexSection">
-      <button class="leftPrevious">LEFT RIGHT LEFT</button>
+      <button class="leftPrevious"><i class="fas fa-angle-left"></i></button>
       <section class="apiBox">
-        <p class="line1"></p>
-        <p class="line2"></p>
-        <p class="line3"></p>
-        <p class="line4">
-          <span class="days">days</span>
-          <span class="hours">hours</span>
-          <span class="minutes">minutwes</span>
-          <span class="seconds">seconds</span>
-        </p>
+        <div class="separateCenterText">
+          <br /><br />
+          <!-- why does this center my code automatically? -->
+          <i class="fas fa-space-shuttle"></i>
+          <span class="line1">title</span>
+        </div>
+        <br /><br /><br />
+        <i class="fas fa-info-circle"></i>
+        <br />
+        <span class="line2">details <br /> </span> <br />
+        <br />
+
+        <hr />
+
+        <br />
+        <section class="line3">
+          <i class="fas fa-clock"></i> <span class="days"></span> days,
+          <span class="hours"></span> hours,
+          <span class="minutes"></span> minutes,
+          <span class="seconds"></span> seconds
+        </section>
+        <br />
+
+        <hr />
+        <i class="fas fa-map-marked-alt"></i>
+
+        <span class="line4"> location </span><br /><br /><br />
       </section>
-      <button class="rightNext">RIGHT RIGHT RIGHT</button>
+      <button class="rightNext"><i class="fas fa-angle-right"></i></button>
     </section>
-    <section class="bodytext"></section>
+    <section class="bodyText">
+      <h2 class="footerh2">Our Mission Statement.</h2>
+      <p>
+        Ancient alien extraterrestrial origin sanskrit Annunaki, helicopter
+        heiroglyph aircraft pre-colonial aerodynamics, ancient alien theorists
+        weightless sanskrit. Star people Easter island inter-dimensional crystal
+        skull anti-gravity vimana, the answer is a resounding YES... Mainstream
+        archaelogy golden disk targeted mutation, ancient alien theorists
+        otherworldly visitors worm hole space brothers SETI space time.
+      </p>
+    </section>
     <section class="bottomfooter">
       <h4 class="sdg">
         made with 💛 at <a href="https://www.suncoast.io">SDG</a>
       </h4>
     </section>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/screen.css" />
-  </head>
-  <body>
-    <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
