updated CSS and adjusted media queries

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <ul class="toplist">
-      <li>SDG Astro Lounge</li>
+      <li id="largeTitle">SDG Astro Lounge</li>
       <a href class="aboutbtn">About</a>
       <a href class="contactbtn">Contact Us</a>
     </ul>
@@ -35,12 +35,10 @@
         </div>
         <br /><br /><br />
         <i class="fas fa-info-circle"></i>
-        <br />
         <span class="line2">details <br /> </span> <br />
         <br />
 
         <hr />
-
         <br />
         <section class="line3">
           <i class="fas fa-clock"></i> <span class="days"></span> days,
@@ -49,8 +47,8 @@
           <span class="seconds"></span> seconds
         </section>
         <br />
-
         <hr />
+        <br />
         <i class="fas fa-map-marked-alt"></i>
 
         <span class="line4"> location </span><br /><br /><br />
