completed button response

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/screen.css" />
-    <script src="/main.js" charset="utf-8"></script>
   </head>
   <body>
     <ul class="toplist">
@@ -25,7 +24,7 @@
     <div class="copyrightText"></div>
     <h2 class="launchesHeader">Upcoming SpaceX Launches</h2>
     <section class="flexSection">
-      <button class="leftPrevious"><i class="fas fa-angle-left"></i></button>
+      <button class="left"><i class="fas fa-angle-left"></i></button>
       <section class="apiBox">
         <div class="separateCenterText">
           <br /><br />
@@ -53,7 +52,7 @@
 
         <span class="line4"> location </span><br /><br /><br />
       </section>
-      <button class="rightNext"><i class="fas fa-angle-right"></i></button>
+      <button class="right"><i class="fas fa-angle-right"></i></button>
     </section>
     <section class="bodyText">
       <h2 class="footerh2">Our Mission Statement.</h2>
@@ -71,5 +70,6 @@
         made with 💛 at <a href="https://www.suncoast.io">SDG</a>
       </h4>
     </section>
+    <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
